@@ -1,4 +1,4 @@
-// Copyright (C) 2009 Stephen Leake <stephen_leake@stephe-leake.org>
+// Copyright (C) 2009, 2010 Stephen Leake <stephen_leake@stephe-leake.org>
 // Copyright (C) 2002 Graydon Hoare <graydon@pobox.com>
 //
 // This program is made available under the GNU GPL version 2.0 or
@@ -144,7 +144,7 @@ dump_diffs(lua_hooks & lua,
               file_path left_path, right_path;
               left_roster.get_name(i.left_key(), left_path);
               // right_path is null
-          
+
               file_id left_id, right_id;
               left_id = downcast_to_file_t(i.left_data())->content;
               // right_id is null
@@ -157,7 +157,7 @@ dump_diffs(lua_hooks & lua,
               if (show_encloser)
                 lua.hook_get_encloser_pattern(left_path, encloser);
 
-              dump_diff(lua, 
+              dump_diff(lua,
                         left_path, right_path,
                         left_id, right_id,
                         left_data, right_data,
@@ -173,7 +173,7 @@ dump_diffs(lua_hooks & lua,
               file_path left_path, right_path;
               // left_path is null
               right_roster.get_name(i.right_key(), right_path);
-           
+
               file_id left_id, right_id;
               // left_id is null
               right_id = downcast_to_file_t(i.right_data())->content;
@@ -186,7 +186,7 @@ dump_diffs(lua_hooks & lua,
               if (show_encloser)
                 lua.hook_get_encloser_pattern(right_path, encloser);
 
-              dump_diff(lua, 
+              dump_diff(lua,
                         left_path, right_path,
                         left_id, right_id,
                         left_data, right_data,
@@ -199,7 +199,7 @@ dump_diffs(lua_hooks & lua,
           // moved/renamed/patched/attribute changes
           if (is_file_t(i.left_data()))
             {
-          
+
               file_id left_id, right_id;
               left_id = downcast_to_file_t(i.left_data())->content;
               right_id = downcast_to_file_t(i.right_data())->content;
@@ -210,7 +210,7 @@ dump_diffs(lua_hooks & lua,
               file_path left_path, right_path;
               left_roster.get_name(i.left_key(), left_path);
               right_roster.get_name(i.right_key(), right_path);
-          
+
               data left_data, right_data;
               get_data(db, left_path, left_id, left_from_db, left_data);
               get_data(db, right_path, right_id, right_from_db, right_data);
@@ -219,7 +219,7 @@ dump_diffs(lua_hooks & lua,
               if (show_encloser)
                 lua.hook_get_encloser_pattern(right_path, encloser);
 
-              dump_diff(lua, 
+              dump_diff(lua,
                         left_path, right_path,
                         left_id, right_id,
                         left_data, right_data,
@@ -514,7 +514,7 @@ log_certs(vector<cert> const & certs, ostream & os, cert_name const & name,
               I(name == date_cert_name);
               os << date_t(i->value()).as_formatted_localtime(date_fmt);
             }
-            
+
           first = false;
         }
     }
@@ -545,16 +545,100 @@ typedef priority_queue<pair<rev_height, revision_id>,
                        vector<pair<rev_height, revision_id> >,
                        rev_cmp> frontier_t;
 
-CMD(log, "log", "", CMD_REF(informative), N_("[PATH] ..."),
-    N_("Prints selected history in forward or reverse order"),
-    N_("This command prints selected history in forward or reverse order, "
-       "filtering it by PATH if given."),
-    options::opts::last | options::opts::next |
-    options::opts::from | options::opts::to | options::opts::revision |
-    options::opts::brief | options::opts::diffs |
-    options::opts::depth | options::opts::exclude |
-    options::opts::no_merges | options::opts::no_files |
-    options::opts::no_graph)
+void
+log_print_rev (app_state &      app,
+               database &       db,
+               project_t &      project,
+               revision_id      rid,
+               revision_t &     rev,
+               string           date_fmt,
+               node_restriction mask,
+               bool             automate,
+               ostream &        out)
+{
+  if (automate)
+    {
+      out << rid << "\n";
+    }
+  else
+    {
+      cert_name const author_name(author_cert_name);
+      cert_name const date_name(date_cert_name);
+      cert_name const branch_name(branch_cert_name);
+      cert_name const tag_name(tag_cert_name);
+      cert_name const changelog_name(changelog_cert_name);
+      cert_name const comment_name(comment_cert_name);
+      vector<cert> certs;
+      project.get_revision_certs(rid, certs);
+
+      if (app.opts.brief)
+        {
+          out << rid;
+          log_certs(certs, out, author_name);
+          if (app.opts.no_graph)
+            log_certs(certs, out, date_name, date_fmt);
+          else
+            {
+              out << '\n';
+              log_certs(certs, out, date_name, date_fmt);
+            }
+          log_certs(certs, out, branch_name);
+          out << '\n';
+        }
+      else
+        {
+          utf8 header;
+          revision_header(rid, rev, certs, date_fmt, header);
+
+          external header_external;
+          utf8_to_system_best_effort(header, header_external);
+          out << header_external;
+
+          if (!app.opts.no_files)
+            {
+              utf8 summary;
+              revision_summary(rev, summary);
+              external summary_external;
+              utf8_to_system_best_effort(summary, summary_external);
+              out << summary_external;
+            }
+        }
+
+      if (app.opts.diffs)
+        {
+          // if the current roster was loaded above this should hit the
+          // cache and not cost much... logging diffs isn't superfast
+          // regardless.
+          roster_t current_roster;
+          db.get_roster(rid, current_roster);
+
+          for (edge_map::const_iterator e = rev.edges.begin();
+               e != rev.edges.end(); ++e)
+            {
+              roster_t parent_roster, restricted_roster;
+
+              db.get_roster(edge_old_revision(e), parent_roster);
+
+              // always show forward diffs from the parent roster to
+              // the current roster regardless of the log direction
+              make_restricted_roster(parent_roster, current_roster,
+                                     restricted_roster, mask);
+
+              dump_diffs(app.lua, db, parent_roster, restricted_roster,
+                         out, app.opts.diff_format,
+                         app.opts.external_diff_args_given,
+                         app.opts.external_diff_args,
+                         true, true,
+                         !app.opts.no_show_encloser);
+            }
+        }
+    }
+}
+
+void
+log_common (app_state & app,
+            args_vector args,
+            bool automate)
 {
   database db(app);
   project_t project(db);
@@ -738,12 +822,6 @@ CMD(log, "log", "", CMD_REF(informative), N_("[PATH] ..."),
       L(FL("log %d starting revisions") % starting_revs.size());
     }
 
-  cert_name const author_name(author_cert_name);
-  cert_name const date_name(date_cert_name);
-  cert_name const branch_name(branch_cert_name);
-  cert_name const tag_name(tag_cert_name);
-  cert_name const changelog_name(changelog_cert_name);
-  cert_name const comment_name(comment_cert_name);
 
   // we can use the markings if we walk backwards for a restricted log
   bool use_markings(direction == log_reverse && !mask.empty());
@@ -842,85 +920,27 @@ CMD(log, "log", "", CMD_REF(informative), N_("[PATH] ..."),
 
       if (print_this)
         {
-          vector<cert> certs;
-          project.get_revision_certs(rid, certs);
-
-          ostringstream out;
-          if (app.opts.brief)
-            {
-              out << rid;
-              log_certs(certs, out, author_name);
-              if (app.opts.no_graph)
-                log_certs(certs, out, date_name, date_fmt);
-              else
-                {
-                  out << '\n';
-                  log_certs(certs, out, date_name, date_fmt);
-                }
-              log_certs(certs, out, branch_name);
-              out << '\n';
-            }
+          if (automate)
+            log_print_rev (app, db, project, rid, rev, date_fmt, mask, automate, cout);
           else
             {
-              utf8 header;
-              revision_header(rid, rev, certs, date_fmt, header);
+              ostringstream out;
+              log_print_rev (app, db, project, rid, rev, date_fmt, mask, automate, out);
 
-              external header_external;
-              utf8_to_system_best_effort(header, header_external);
-              out << header_external;
-
-              if (!app.opts.no_files)
-                {
-                  utf8 summary;
-                  revision_summary(rev, summary);
-                  external summary_external;
-                  utf8_to_system_best_effort(summary, summary_external);
-                  out << summary_external;
-                }
-            }
-
-          if (app.opts.diffs)
-            {
-              // if the current roster was loaded above this should hit the
-              // cache and not cost much... logging diffs isn't superfast
-              // regardless.
-              roster_t current_roster;
-              db.get_roster(rid, current_roster);
-
-              for (edge_map::const_iterator e = rev.edges.begin();
-                   e != rev.edges.end(); ++e)
-                {
-                  roster_t parent_roster, restricted_roster;
-
-                  db.get_roster(edge_old_revision(e), parent_roster);
-
-                  // always show forward diffs from the parent roster to
-                  // the current roster regardless of the log direction
-                  make_restricted_roster(parent_roster, current_roster,
-                                         restricted_roster, mask);
-
-                  dump_diffs(app.lua, db, parent_roster, restricted_roster,
-                             out, app.opts.diff_format, 
-                             app.opts.external_diff_args_given,
-                             app.opts.external_diff_args,
-                             true, true,
-                             !app.opts.no_show_encloser);
-                }
+              string out_system;
+              utf8_to_system_best_effort(utf8(out.str(), origin::internal), out_system);
+              if (app.opts.no_graph)
+                cout << out_system;
+              else
+                graph.print(rid, interesting, out_system);
             }
 
           if (next > 0)
             next--;
           else if (last > 0)
             last--;
-
-          string out_system;
-          utf8_to_system_best_effort(utf8(out.str(), origin::internal), out_system);
-          if (app.opts.no_graph)
-            cout << out_system;
-          else
-            graph.print(rid, interesting, out_system);
         }
-      else if (use_markings && !app.opts.no_graph)
+      else if (!automate && use_markings && !app.opts.no_graph)
         graph.print(rid, interesting,
                     (F("(Revision: %s)") % rid).str());
 
@@ -942,6 +962,31 @@ CMD(log, "log", "", CMD_REF(informative), N_("[PATH] ..."),
             }
         }
     }
+}
+
+CMD(log, "log", "", CMD_REF(informative), N_("[PATH] ..."),
+    N_("Prints selected history in forward or reverse order"),
+    N_("This command prints selected history in forward or reverse order, "
+       "filtering it by PATH if given."),
+    options::opts::last | options::opts::next |
+    options::opts::from | options::opts::to | options::opts::revision |
+    options::opts::brief | options::opts::diffs |
+    options::opts::depth | options::opts::exclude |
+    options::opts::no_merges | options::opts::no_files |
+    options::opts::no_graph)
+{
+  log_common (app, args, false);
+}
+
+CMD_AUTOMATE(log, N_("[PATH] ..."),
+             N_("list selected revision history"),
+             "",
+    options::opts::last | options::opts::next |
+    options::opts::from | options::opts::to |
+    options::opts::depth | options::opts::exclude |
+    options::opts::no_merges | options::opts::no_files)
+{
+  log_common (app, args, true);
 }
 
 // Local Variables:
