@@ -11,6 +11,10 @@ Xxx Xxx 99 99:99:99 UTC 2010
 
         New Features
 
+        - New automation command 'log' which behaves identical to the
+          normal 'log' command, except that it only outputs the
+          revision ids.
+
         Bugs Fixed
 
         Other
